--- a/webpage/game_n_authors.html
+++ b/webpage/game_n_authors.html
@@ -8,7 +8,7 @@
                 margin: auto;
                 width: 75%;
                 padding: 10px;
-                background-color: rgba(0, 0, 0, 0.295);
+                background-color: rgba(0, 0, 0, 0.5);
                 height: 95%;
             }
             html{
@@ -37,10 +37,11 @@
 
     </body>
     <DIV class="center">
-        <nav>
+        <nav style="text-align: left;">
             <ul>
-              <li><a href="Tikumang_WKraam_TSchaffrik.html">Menu</a></li>
-              <li><a href="game_n_authors.html">Programmist ja autoritest</a></li>
+              <li><a href="Tikumang_WKraam_TSchaffrik.html" style="color:white">Menu</a></li>
+              <li><a href="game_n_authors.html" style="color:white">Programmist ja autoritest</a></li>
+              <li><a href="https://github.com/wkraam/JavaGroupproject" target="_blank" style="color:white">Githubi link tööle</a></li>
             </ul>
           </nav>
         <p></p>
