--- a/webpage/Tikumang_WKraam_TSchaffrik.html
+++ b/webpage/Tikumang_WKraam_TSchaffrik.html
@@ -8,7 +8,7 @@
                 margin: auto;
                 width: 75%;
                 padding: 10px;
-                background-color: rgba(0, 0, 0, 0.295);
+                background-color: rgba(0, 0, 0, 0.5);
                 height: 95%;
             }
             html{
@@ -24,6 +24,10 @@
                 text-align: center;
                 color: white;
             }
+            .ref{
+                text-align: left;
+                color: white;
+            }
         </style>
     </head>
     
@@ -33,10 +37,12 @@
 
     </body>
     <DIV class="center">
-        <nav>
+        <nav class="ref">
             <ul>
-              <li><a href="Tikumang_WKraam_TSchaffrik.html">Menu</a></li>
-              <li><a href="game_n_authors.html">Programmist ja autoritest</a></li>
+              <li><a href="Tikumang_WKraam_TSchaffrik.html" style="color:white">Menu</a></li>
+              <li><a href="game_n_authors.html" style="color:white">Programmist ja autoritest</a></li>
+              <li><a href="https://github.com/wkraam/JavaGroupproject" target="_blank" style="color:white">Githubi link tööle</a></li>
+              
             </ul>
           </nav>
         <p>autorid: Triin Schaffrik ja Walther Kraam</p>
